# powerd

./: Cargo.toml  README.md  powerd.service
src/: daemon.rs  main.rs  msr.rs  ppd.rs  sysfs.rs  throttle.rs  upower.rs
src/sensors/: cooling_profile.rs  intel_dptf.rs  intel_gpu.rs  intel_pstate.rs  intel_rapl.rs  mod.rs  throttle.rs
