[package]
name = "powerd"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
clap = { version = "4.5.40", features = ["cargo", "derive"] }
dbus = "0.9.7"
env_logger = "0.11.8"
log = { version = "0.4.27", features = ["std"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
